Revision history for File::DataClass

          - Added result source types

0.55.1    2015-02-05 00:03:07
          - Replaced MooX::ClassStash with Subclass::Of and a factory pattern
          - Changed default perms to 640

0.54.1    2014-12-19 22:52:50
          - Updated prereqs. Slaven is testing with modules from the back
            pan again 0b1e0b44-87ba-11e4-ac75-b26ee0bfc7aa

0.53.1    2014-12-19 11:47:56
          - Storage API methods now called read_from_file and write_to_file
          - Dropped Class::Method::ModifiersX::Augment
          - Coverted rest to lexical subroutines
          - Converted ::IO to lexical subroutines
          - Added ::IO->digest. Robbed from Path::Tiny

0.52.1    2014-11-10 12:40:46
          - Fixed NTFS skip in tests

0.51.1    2014-11-09 15:49:44
          - Mark NTFS as unsupported
          - Make ::IO::atomic a no op on mswin32
            f1cbd4c4-6bf5-1014-bf4f-15730ce696e1 - which didn't work
            so behaviour restored
          - Added t/boilerplate.pm
          - New win32 fail added debug to tests
            7ccf4f62-8e65-1014-a370-e51e2b825c07

0.50.1    2014-11-07 18:49:49
          - Added async locking and constants
          - Added IO::has_lock to track the state of the flock
          - Changed IO::_lock from a bool to an enumerated type
            Can be FALSE, LOCK_BLOCKING, or LOCK_NONBLOCKING

0.49.1    2014-10-02 20:57:55
          - Updated prereqs
          - Spelling fixes
          - Removed Hash::MoreUtils require from tests

0.48.1    2014-09-03 23:22:44
          - Removed CHI. Reduces dependencies

0.47.1    2014-08-27 17:15:48
          - Have new one liner to feature test this particular insanity
            d26d4928-6bf5-1014-99ad-e1a5890cd912

0.46.1    2014-08-26 17:40:30
          - Hate win32 smokers
            0b96e4a1-6bf7-1014-b852-a17c890cd912
          - Added MANIFEST to repository
          - Fixed dependency version
          - Added Travis integration and badges