@@ -36,7 +36,7 @@ my $prereqs  = {
     'Subclass::Of' => '0.003',
     'Try::Tiny' => '0.22',
     'Type::Tiny' => '1.000002',
-    'Unexpected' => 'v0.35.0',
+    'Unexpected' => 'v0.36.0',
     'namespace::autoclean' => '0.22',
     'namespace::clean' => '0.25',
     'perl' => '5.010001'
