@@ -10,7 +10,7 @@ requires "Moo" => "1.006";
 requires "Subclass::Of" => "0.003";
 requires "Try::Tiny" => "0.22";
 requires "Type::Tiny" => "1.000002";
-requires "Unexpected" => "v0.35.0";
+requires "Unexpected" => "v0.36.0";
 requires "namespace::autoclean" => "0.22";
 requires "namespace::clean" => "0.25";
 requires "perl" => "5.010001";
