@@ -16,7 +16,7 @@ Moo               = 1.006
 Subclass::Of      = 0.003
 Try::Tiny         = 0.22
 Type::Tiny        = 1.000002
-Unexpected        = v0.35.0
+Unexpected        = v0.36.0
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
